운영관리 > 공지사항 내 대상 프로젝트 관련 수정부 체크박스 관련사항 반영(수정 이외 반영)